# little-computer-emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
assembler/: CMakeLists.txt
assembler/include/: CodeGenerator.h  Instruction.h  Lexem.h  Lexer.h  Parser.h  SourceLocation.h  TypeChecker.h
assembler/src/: CodeGenerator.cpp  Lexer.cpp  Parser.cpp  TypeChecker.cpp  main.cpp
assembler/tests/: TestCodeGenerator.cpp  TestLexer.cpp  TestParser.cpp  TestTypeChecker.cpp
common/: CMakeLists.txt
common/include/: ErrorReporting.h  SourceLocation.h
common/src/: ErrorReporting.cpp
doc/: Architecture.md  Assembly.md
emulator/: CMakeLists.txt
emulator/include/: CPU.h  MemoryBlock.h  RandomAccessMemoryBlock.h
emulator/src/: CPU.cpp  RandomAccessMemoryBlock.cpp
emulator/tests/: TestCPU.cpp
